# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci  pyci.yml
gendiff/: __init__.py  cli.py  compare_files.py  constants.py  difference.py  files.py  gendiff.py  parsers.py  reading.py  setup.cfg
gendiff/engine/: compare_files.py  parsers.py  stylish.py
gendiff/formatters/: formatter_plain.py  formatter_stylish.py  json.py  make_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
gendiff/tests/: generate_test.py
tests/: test_gendiff.py  test_generate.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py  test_step8.py
tests/fixtures/: answer.txt  json_result.json  styl_nested_result.txt
tests/fixtures/nested_json/: original.json
tests/fixtures/nested_yml/: modified.yml  original.yml
tests/fixtures/step6/: modified.yml  original.yml
tests/fixtures/step8/: should_be.json
