[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = ""
authors = ["Sergey Golodyaev <gabadysergei@yandex.ru>"]
packages = [
  { include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"
